custom input date format

--- a/custom-input-date.scss
+++ b/custom-input-date.scss
@@ -23,17 +23,17 @@ input[type=date] {
     width: 160px;
 }
 
-// Set a visible font for the :after pseudo-elements
-::-webkit-datetime-edit-year-field:after,
-::-webkit-datetime-edit-month-field:after,
-::-webkit-datetime-edit-day-field:after {
+// Set a visible font for the ::after pseudo-elements
+::-webkit-datetime-edit-year-field::after,
+::-webkit-datetime-edit-month-field::after,
+::-webkit-datetime-edit-day-field::after {
     font-family: 'Helvetica Neue', 'Helvetica', 'Arial';
     padding-right: 3px;
 }
 
 // Re-apply the day #
 @for $day from 0 through 31 {
-    input[data-day="#{$day}"]::-webkit-datetime-edit-day-field:after {
+    input[data-day="#{$day}"]::-webkit-datetime-edit-day-field::after {
         @if $day < 10 {
             $day: unquote('0' + $day);
         }
@@ -46,7 +46,7 @@ $months: '01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12';
 @each $month in $months {
     $i: index($months, $month);
     
-    input[data-month="#{$i}"][data-style="reg"]::-webkit-datetime-edit-month-field:after { 
+    input[data-month="#{$i}"][data-style="reg"]::-webkit-datetime-edit-month-field::after { 
         content: "#{$month}";
     }
 }
@@ -55,7 +55,7 @@ $months: Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec;
 @each $month in $months {
     $i: index($months, $month);
     
-    input[data-month="#{$i}"][data-style="en"]::-webkit-datetime-edit-month-field:after { 
+    input[data-month="#{$i}"][data-style="en"]::-webkit-datetime-edit-month-field::after { 
         content: "#{$month}";
     }
 }
@@ -64,25 +64,25 @@ $months: jan, fev, mar, avr, mai, jun, jul, aou, sep, oct, nov, dec;
 @each $month in $months {
     $i: index($months, $month);
     
-    input[data-month="#{$i}"][data-style="fr"]::-webkit-datetime-edit-month-field:after { 
+    input[data-month="#{$i}"][data-style="fr"]::-webkit-datetime-edit-month-field::after { 
         content: "#{$month}";
     }
 }
 
 // Re-apply the year
 @for $year from 2000 through 2050 {
-    input[data-year="#{$year}"]::-webkit-datetime-edit-year-field:after {
+    input[data-year="#{$year}"]::-webkit-datetime-edit-year-field::after {
         content: "#{$year}";
     }
 }
 
 // Re-specify blank input
-input[data-day="NaN"]::-webkit-datetime-edit-day-field:after {
+input[data-day="NaN"]::-webkit-datetime-edit-day-field::after {
     content: "--";
 }
-input[data-month="NaN"]::-webkit-datetime-edit-month-field:after {
+input[data-month="NaN"]::-webkit-datetime-edit-month-field::after {
     content: "---";
 }
-input[data-year="0"]::-webkit-datetime-edit-year-field:after {
+input[data-year="0"]::-webkit-datetime-edit-year-field::after {
     content: "----";
 }    
